// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PopupChangePassword > Emits close > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupChangePassword > Emits close > allCalls 1`] = `[]`;

exports[`PopupChangePassword > Emits close > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupChangePassword > Emits close > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupChangePassword > Emits close > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupChangePassword > Emits close > openedPopup 1`] = `undefined`;

exports[`PopupChangePassword > Emits close > selectedTheme 1`] = `"System"`;

exports[`PopupChangePassword > Emits close > storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupChangePassword > Emits close > storage.get('THEME') 1`] = `null`;

exports[`PopupChangePassword > Emits close > storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupChangePassword > Emits close > storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupChangePassword > Emits close > storage.get('USERNAME') 1`] = `null`;

exports[`PopupChangePassword > Emits close > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoading": false,
  "isLoggedIn": false,
  "isLogin": true,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupChangePassword > Emits close > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupChangePassword > Mounts > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupChangePassword > Mounts > allCalls 1`] = `[]`;

exports[`PopupChangePassword > Mounts > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupChangePassword > Mounts > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupChangePassword > Mounts > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupChangePassword > Mounts > openedPopup 1`] = `undefined`;

exports[`PopupChangePassword > Mounts > selectedTheme 1`] = `"System"`;

exports[`PopupChangePassword > Mounts > storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupChangePassword > Mounts > storage.get('THEME') 1`] = `null`;

exports[`PopupChangePassword > Mounts > storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupChangePassword > Mounts > storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupChangePassword > Mounts > storage.get('USERNAME') 1`] = `null`;

exports[`PopupChangePassword > Mounts > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoading": false,
  "isLoggedIn": false,
  "isLogin": true,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupChangePassword > Mounts > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupChangePassword > Shows default error message when none provided > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupChangePassword > Shows default error message when none provided > allCalls 1`] = `[]`;

exports[`PopupChangePassword > Shows default error message when none provided > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupChangePassword > Shows default error message when none provided > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupChangePassword > Shows default error message when none provided > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupChangePassword > Shows default error message when none provided > openedPopup 1`] = `undefined`;

exports[`PopupChangePassword > Shows default error message when none provided > selectedTheme 1`] = `"System"`;

exports[`PopupChangePassword > Shows default error message when none provided > storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupChangePassword > Shows default error message when none provided > storage.get('THEME') 1`] = `null`;

exports[`PopupChangePassword > Shows default error message when none provided > storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupChangePassword > Shows default error message when none provided > storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupChangePassword > Shows default error message when none provided > storage.get('USERNAME') 1`] = `null`;

exports[`PopupChangePassword > Shows default error message when none provided > syncState 1`] = `
{
  "appError": AppError {
    "code": 5,
    "display": {
      "form": true,
    },
    "message": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoading": false,
  "isLoggedIn": false,
  "isLogin": true,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupChangePassword > Shows default error message when none provided > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupChangePassword > Shows error message > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupChangePassword > Shows error message > allCalls 1`] = `[]`;

exports[`PopupChangePassword > Shows error message > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupChangePassword > Shows error message > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupChangePassword > Shows error message > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupChangePassword > Shows error message > openedPopup 1`] = `undefined`;

exports[`PopupChangePassword > Shows error message > selectedTheme 1`] = `"System"`;

exports[`PopupChangePassword > Shows error message > storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupChangePassword > Shows error message > storage.get('THEME') 1`] = `null`;

exports[`PopupChangePassword > Shows error message > storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupChangePassword > Shows error message > storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupChangePassword > Shows error message > storage.get('USERNAME') 1`] = `null`;

exports[`PopupChangePassword > Shows error message > syncState 1`] = `
{
  "appError": AppError {
    "code": 5,
    "display": {
      "form": true,
    },
    "message": "Mock error",
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoading": false,
  "isLoggedIn": false,
  "isLogin": true,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupChangePassword > Shows error message > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupChangePassword > Validates fields and submits > KeyStore.getKey() 1`] = `CryptoKey {}`;

exports[`PopupChangePassword > Validates fields and submits > allCalls 1`] = `
[
  [
    "request",
    {
      "name": "/login",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": true,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "note": {
          "content": {
            "body": "",
            "delta": {
              "ops": [],
            },
            "title": "",
          },
          "id": "id",
          "timestamp": 0,
        },
      },
      "name": "new_note",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "notes": [
          {
            "content": {
              "body": "",
              "delta": {
                "ops": [],
              },
              "title": "",
            },
            "id": "id",
            "timestamp": 0,
          },
        ],
      },
      "name": "sync_local_notes",
    },
  ],
  [
    "request",
    {
      "name": "/account/password/change",
    },
  ],
]
`;

exports[`PopupChangePassword > Validates fields and submits > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupChangePassword > Validates fields and submits > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupChangePassword > Validates fields and submits > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    {
      "content": {
        "body": "",
        "delta": {
          "ops": [],
        },
        "title": "",
      },
      "id": "id",
      "timestamp": 0,
    },
  ],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupChangePassword > Validates fields and submits > openedPopup 1`] = `undefined`;

exports[`PopupChangePassword > Validates fields and submits > selectedTheme 1`] = `"System"`;

exports[`PopupChangePassword > Validates fields and submits > storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupChangePassword > Validates fields and submits > storage.get('THEME') 1`] = `null`;

exports[`PopupChangePassword > Validates fields and submits > storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupChangePassword > Validates fields and submits > storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupChangePassword > Validates fields and submits > storage.get('USERNAME') 1`] = `"d"`;

exports[`PopupChangePassword > Validates fields and submits > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoading": false,
  "isLoggedIn": true,
  "isLogin": true,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "d",
}
`;

exports[`PopupChangePassword > Validates fields and submits > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
